--- a/CanESM5.ipynb
+++ b/CanESM5.ipynb
@@ -18,8 +18,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-24T23:40:59.029493Z",
-     "start_time": "2025-01-24T23:40:58.886551Z"
+     "end_time": "2025-01-25T19:55:28.090860Z",
+     "start_time": "2025-01-25T19:55:28.088155Z"
     }
    },
    "cell_type": "code",
@@ -32,13 +32,13 @@
     "import seaborn as sns"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-24T23:41:02.442050Z",
-     "start_time": "2025-01-24T23:40:59.037535Z"
+     "end_time": "2025-01-25T19:55:34.382491Z",
+     "start_time": "2025-01-25T19:55:30.516301Z"
     }
    },
    "cell_type": "code",
@@ -47,196 +47,30 @@
     "chirps = xr.open_dataset('data/CHIRPS/chirps-v2.0.monthly.nc')"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 38
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2025-01-25T00:19:15.813761Z",
-     "start_time": "2025-01-24T23:41:02.689357Z"
+     "start_time": "2025-01-25T19:55:34.388720Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "CanESM5_south_sudan = (CanESM5.sel(Y=slice(3.5, 12.5), X=slice(25, 35))\n",
+    "CanESM5_south_sudan = (CanESM5.sel(Y=slice(3.5, 12.5), X=slice(205, 215))\n",
     "                       .rename({'Y': 'latitude', 'X': 'longitude', 'prec': 'predicted precip', 'S': 'date of prediction', 'L': 'lead time'})\n",
     "                       .groupby(['latitude', 'longitude', 'date of prediction', 'lead time'])\n",
     "                       .mean('M'))\n",
     "CanESM5_south_sudan_df = CanESM5_south_sudan.to_dataframe().reset_index()\n",
     "CanESM5_south_sudan_df['time'] = CanESM5_south_sudan_df.apply(lambda x: x['date of prediction'] + pd.DateOffset(months=int(x['lead time'])), axis=1)\n",
+    "CanESM5_south_sudan_df['longitude'] = CanESM5_south_sudan_df['longitude'] - 180\n",
     "CanESM5_south_sudan_df"
    ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "        latitude  longitude date of prediction  lead time  predicted precip  \\\n",
-       "0            4.0       25.0         1991-01-01        0.5          1.467990   \n",
-       "1            4.0       25.0         1991-01-01        1.5          2.146416   \n",
-       "2            4.0       25.0         1991-01-01        2.5          4.841275   \n",
-       "3            4.0       25.0         1991-01-01        3.5          6.101315   \n",
-       "4            4.0       25.0         1991-01-01        4.5          7.684224   \n",
-       "...          ...        ...                ...        ...               ...   \n",
-       "432427      12.0       35.0         2025-01-01        7.5          8.676905   \n",
-       "432428      12.0       35.0         2025-01-01        8.5          7.918952   \n",
-       "432429      12.0       35.0         2025-01-01        9.5          4.515189   \n",
-       "432430      12.0       35.0         2025-01-01       10.5          1.127943   \n",
-       "432431      12.0       35.0         2025-01-01       11.5          0.251921   \n",
-       "\n",
-       "             time  \n",
-       "0      1991-01-01  \n",
-       "1      1991-02-01  \n",
-       "2      1991-03-01  \n",
-       "3      1991-04-01  \n",
-       "4      1991-05-01  \n",
-       "...           ...  \n",
-       "432427 2025-08-01  \n",
-       "432428 2025-09-01  \n",
-       "432429 2025-10-01  \n",
-       "432430 2025-11-01  \n",
-       "432431 2025-12-01  \n",
-       "\n",
-       "[432432 rows x 6 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>date of prediction</th>\n",
-       "      <th>lead time</th>\n",
-       "      <th>predicted precip</th>\n",
-       "      <th>time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>1991-01-01</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>1.467990</td>\n",
-       "      <td>1991-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>1991-01-01</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>2.146416</td>\n",
-       "      <td>1991-02-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>1991-01-01</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>4.841275</td>\n",
-       "      <td>1991-03-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>1991-01-01</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>6.101315</td>\n",
-       "      <td>1991-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>1991-01-01</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>7.684224</td>\n",
-       "      <td>1991-05-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>432427</th>\n",
-       "      <td>12.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>2025-01-01</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>8.676905</td>\n",
-       "      <td>2025-08-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>432428</th>\n",
-       "      <td>12.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>2025-01-01</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>7.918952</td>\n",
-       "      <td>2025-09-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>432429</th>\n",
-       "      <td>12.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>2025-01-01</td>\n",
-       "      <td>9.5</td>\n",
-       "      <td>4.515189</td>\n",
-       "      <td>2025-10-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>432430</th>\n",
-       "      <td>12.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>2025-01-01</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>1.127943</td>\n",
-       "      <td>2025-11-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>432431</th>\n",
-       "      <td>12.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>2025-01-01</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>0.251921</td>\n",
-       "      <td>2025-12-01</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>432432 rows × 6 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 3
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
@@ -437,15 +271,16 @@
    },
    "cell_type": "code",
    "source": [
-    "CanESM5_eastern_east_africa = (CanESM5.sel(Y=slice(-3.5, 8.5), X=slice(38, 50))\n",
+    "CanESM5_eastern_east_africa = (CanESM5.sel(Y=slice(-3.5, 8.5), X=slice(218, 230))\n",
     "                       .rename({'Y': 'latitude', 'X': 'longitude', 'prec': 'predicted precip', 'S': 'date of prediction', 'L': 'lead time'})\n",
     "                       .groupby(['latitude', 'longitude', 'date of prediction', 'lead time'])\n",
     "                       .mean('M'))\n",
     "CanESM5_eastern_east_africa_df = CanESM5_eastern_east_africa.to_dataframe().reset_index()\n",
     "CanESM5_eastern_east_africa_df['time'] = CanESM5_eastern_east_africa_df.apply(lambda x: x['date of prediction'] + pd.DateOffset(months=int(x['lead time'])), axis=1)\n",
+    "CanESM5_eastern_east_africa_df['longitude'] = CanESM5_eastern_east_africa_df['longitude'] - 180\n",
     "\n",
     "chirps_eastern_east_africa = (chirps.sel(latitude=slice(-3.5, 8.5), \n",
-    "                                longitude=slice(38, 50))\n",
+    "                                longitude=slice(37, 51))\n",
     "                      .interp_like(CanESM5_eastern_east_africa, method='nearest'))\n",
     "chirps_eastern_east_africa_df = chirps_eastern_east_africa.to_dataframe().reset_index()\n",
     "\n",
@@ -622,15 +457,16 @@
    },
    "cell_type": "code",
    "source": [
-    "CanESM5_eastern_ukraine = (CanESM5.sel(Y=slice(45, 51), X=slice(31, 40))\n",
+    "CanESM5_eastern_ukraine = (CanESM5.sel(Y=slice(45, 51), X=slice(211, 220))\n",
     "                       .rename({'Y': 'latitude', 'X': 'longitude', 'prec': 'predicted precip', 'S': 'date of prediction', 'L': 'lead time'})\n",
     "                       .groupby(['latitude', 'longitude', 'date of prediction', 'lead time'])\n",
     "                       .mean('M'))\n",
     "CanESM5_eastern_ukraine_df = CanESM5_eastern_ukraine.to_dataframe().reset_index()\n",
     "CanESM5_eastern_ukraine_df['time'] = CanESM5_eastern_ukraine_df.apply(lambda x: x['date of prediction'] + pd.DateOffset(months=int(x['lead time'])), axis=1)\n",
+    "CanESM5_eastern_ukraine_df['longitude'] = CanESM5_eastern_ukraine_df['longitude'] - 180\n",
     "\n",
-    "chirps_eastern_ukraine = (chirps.sel(latitude=slice(45, 51), \n",
-    "                                longitude=slice(31, 40))\n",
+    "chirps_eastern_ukraine = (chirps.sel(latitude=slice(44, 52), \n",
+    "                                longitude=slice(30, 41))\n",
     "                      .interp_like(CanESM5_eastern_ukraine, method='nearest'))\n",
     "chirps_eastern_ukraine_df = chirps_eastern_ukraine.to_dataframe().reset_index()\n",
     "\n",
@@ -807,15 +643,16 @@
    },
    "cell_type": "code",
    "source": [
-    "CanESM5_southern_africa = (CanESM5.sel(Y=slice(-23, -15), X=slice(25, 34))\n",
+    "CanESM5_southern_africa = (CanESM5.sel(Y=slice(-23, -15), X=slice(205, 214))\n",
     "                       .rename({'Y': 'latitude', 'X': 'longitude', 'prec': 'predicted precip', 'S': 'date of prediction', 'L': 'lead time'})\n",
     "                       .groupby(['latitude', 'longitude', 'date of prediction', 'lead time'])\n",
     "                       .mean('M'))\n",
     "CanESM5_southern_africa_df = CanESM5_southern_africa.to_dataframe().reset_index()\n",
     "CanESM5_southern_africa_df['time'] = CanESM5_southern_africa_df.apply(lambda x: x['date of prediction'] + pd.DateOffset(months=int(x['lead time'])), axis=1)\n",
+    "CanESM5_southern_africa_df['longitude'] = CanESM5_southern_africa_df['longitude'] - 180\n",
     "\n",
-    "chirps_southern_africa = (chirps.sel(latitude=slice(-23, -15), \n",
-    "                                longitude=slice(25, 34))\n",
+    "chirps_southern_africa = (chirps.sel(latitude=slice(-24, -14), \n",
+    "                                longitude=slice(24, 35))\n",
     "                      .interp_like(CanESM5_southern_africa, method='nearest'))\n",
     "chirps_southern_africa_df = chirps_southern_africa.to_dataframe().reset_index()\n",
     "\n",
@@ -992,15 +829,16 @@
    },
    "cell_type": "code",
    "source": [
-    "CanESM5_west_africa = (CanESM5.sel(Y=slice(10, 13.5), X=slice(-10, 0))\n",
+    "CanESM5_west_africa = (CanESM5.sel(Y=slice(10, 13.5), X=slice(170, 180))\n",
     "                       .rename({'Y': 'latitude', 'X': 'longitude', 'prec': 'predicted precip', 'S': 'date of prediction', 'L': 'lead time'})\n",
     "                       .groupby(['latitude', 'longitude', 'date of prediction', 'lead time'])\n",
     "                       .mean('M'))\n",
     "CanESM5_west_africa_df = CanESM5_west_africa.to_dataframe().reset_index()\n",
     "CanESM5_west_africa_df['time'] = CanESM5_west_africa_df.apply(lambda x: x['date of prediction'] + pd.DateOffset(months=int(x['lead time'])), axis=1)\n",
+    "CanESM5_west_africa_df['longitude'] = CanESM5_west_africa_df['longitude'] - 180\n",
     "\n",
-    "chirps_west_africa = (chirps.sel(latitude=slice(10, 13.5), \n",
-    "                                longitude=slice(-10, 0))\n",
+    "chirps_west_africa = (chirps.sel(latitude=slice(9, 13.5), \n",
+    "                                longitude=slice(-11, 1))\n",
     "                      .interp_like(CanESM5_west_africa, method='nearest'))\n",
     "chirps_west_africa_df = chirps_west_africa.to_dataframe().reset_index()\n",
     "\n",
@@ -1139,150 +977,6 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-25T10:26:54.856568Z",
-     "start_time": "2025-01-25T10:26:54.844137Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "chirps_west_africa_df",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "           time  latitude  longitude  precip\n",
-       "0    1981-01-01      10.0        0.0     NaN\n",
-       "1    1981-01-01      11.0        0.0     NaN\n",
-       "2    1981-01-01      12.0        0.0     NaN\n",
-       "3    1981-01-01      13.0        0.0     NaN\n",
-       "4    1981-02-01      10.0        0.0     NaN\n",
-       "...         ...       ...        ...     ...\n",
-       "2107 2024-11-01      13.0        0.0     NaN\n",
-       "2108 2024-12-01      10.0        0.0     NaN\n",
-       "2109 2024-12-01      11.0        0.0     NaN\n",
-       "2110 2024-12-01      12.0        0.0     NaN\n",
-       "2111 2024-12-01      13.0        0.0     NaN\n",
-       "\n",
-       "[2112 rows x 4 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>precip</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1981-01-01</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1981-01-01</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1981-01-01</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1981-01-01</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1981-02-01</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2107</th>\n",
-       "      <td>2024-11-01</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2108</th>\n",
-       "      <td>2024-12-01</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2109</th>\n",
-       "      <td>2024-12-01</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2110</th>\n",
-       "      <td>2024-12-01</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2111</th>\n",
-       "      <td>2024-12-01</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2112 rows × 4 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 18
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2025-01-25T03:42:26.228973Z",
      "start_time": "2025-01-25T03:42:26.147215Z"
     }
@@ -1331,15 +1025,16 @@
    },
    "cell_type": "code",
    "source": [
-    "CanESM5_sri_lanka = (CanESM5.sel(Y=slice(5.5, 10), X=slice(79.5, 82))\n",
+    "CanESM5_sri_lanka = (CanESM5.sel(Y=slice(5.5, 10), X=slice(159.5, 262))\n",
     "                       .rename({'Y': 'latitude', 'X': 'longitude', 'prec': 'predicted precip', 'S': 'date of prediction', 'L': 'lead time'})\n",
     "                       .groupby(['latitude', 'longitude', 'date of prediction', 'lead time'])\n",
     "                       .mean('M'))\n",
     "CanESM5_sri_lanka_df = CanESM5_sri_lanka.to_dataframe().reset_index()\n",
     "CanESM5_sri_lanka_df['time'] = CanESM5_sri_lanka_df.apply(lambda x: x['date of prediction'] + pd.DateOffset(months=int(x['lead time'])), axis=1)\n",
+    "CanESM5_west_africa_df['longitude'] = CanESM5_west_africa_df['longitude'] - 180\n",
     "\n",
-    "chirps_sri_lanka = (chirps.sel(latitude=slice(5.5, 10), \n",
-    "                                longitude=slice(79.5, 82))\n",
+    "chirps_sri_lanka = (chirps.sel(latitude=slice(5.5, 11), \n",
+    "                                longitude=slice(79.5, 83))\n",
     "                      .interp_like(CanESM5_sri_lanka, method='nearest'))\n",
     "chirps_sri_lanka_df = chirps_sri_lanka.to_dataframe().reset_index()\n",
     "\n",
