--- a/Jupyter notebooks/Figure 3.ipynb
+++ b/Jupyter notebooks/Figure 3.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-01-27T06:21:02.865505Z",
-     "start_time": "2025-01-27T06:21:02.740599Z"
+     "end_time": "2025-01-27T06:24:17.246312Z",
+     "start_time": "2025-01-27T06:24:17.243590Z"
     }
    },
    "source": [
@@ -19,13 +19,13 @@
     "import seaborn as sns"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T06:21:31.867119Z",
-     "start_time": "2025-01-27T06:21:02.872967Z"
+     "end_time": "2025-01-27T06:24:45.617954Z",
+     "start_time": "2025-01-27T06:24:17.284212Z"
     }
    },
    "cell_type": "code",
@@ -56,15 +56,13 @@
    ],
    "id": "50a5b25e9ec03fb9",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 5
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "start_time": "2025-01-27T06:21:32.116419Z"
+     "end_time": "2025-01-27T06:27:14.571549Z",
+     "start_time": "2025-01-27T06:24:45.661300Z"
     }
    },
    "cell_type": "code",
@@ -407,13 +405,23 @@
     "CanESM5_stat_final['model'] = 'CanESM5'"
    ],
    "id": "953d461e9a72c537",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T03:46:37.100076Z",
+     "end_time": "2025-01-27T06:27:14.575532600Z",
      "start_time": "2025-01-27T03:33:39.955879Z"
     }
    },
@@ -763,7 +771,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T03:58:32.716450Z",
+     "end_time": "2025-01-27T06:27:14.575532600Z",
      "start_time": "2025-01-27T03:46:37.104555Z"
     }
    },
@@ -1113,7 +1121,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T04:22:01.891438Z",
+     "end_time": "2025-01-27T06:27:14.575532600Z",
      "start_time": "2025-01-27T03:58:32.856010Z"
     }
    },
@@ -1463,7 +1471,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T04:35:05.223086Z",
+     "end_time": "2025-01-27T06:27:14.576533500Z",
      "start_time": "2025-01-27T04:22:02.047793Z"
     }
    },
@@ -1813,7 +1821,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T04:39:40.353504Z",
+     "end_time": "2025-01-27T06:27:14.576533500Z",
      "start_time": "2025-01-27T04:35:05.396680Z"
     }
    },
@@ -2163,7 +2171,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T05:02:59.104502Z",
+     "end_time": "2025-01-27T06:27:14.576533500Z",
      "start_time": "2025-01-27T04:39:40.558028Z"
     }
    },
@@ -2513,7 +2521,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T05:02:59.415766Z",
+     "end_time": "2025-01-27T06:27:14.576533500Z",
      "start_time": "2025-01-27T05:02:59.328423Z"
     }
    },
@@ -2522,6 +2530,7 @@
     "# merge all model stats\n",
     "model_list = [CanESM5_stat_final, CCSM4_stat_final, CESM1_stat_final, GEM5_stat_final, GFDL_stat_final, NASA_stat_final, NCEP_stat_final]\n",
     "models_stat_final = pd.concat(model_list)\n",
+    "models_stat_final.to_csv('data/csv/models_stat_final.csv')\n",
     "models_stat_final"
    ],
    "id": "8e5538d3ca94c239",
@@ -2724,7 +2733,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T06:15:08.044511Z",
+     "end_time": "2025-01-27T06:27:14.578535800Z",
      "start_time": "2025-01-27T06:14:27.088027Z"
     }
    },
@@ -2769,7 +2778,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T06:15:49.853099Z",
+     "end_time": "2025-01-27T06:27:14.578535800Z",
      "start_time": "2025-01-27T06:15:08.050784Z"
     }
    },
@@ -2779,7 +2788,7 @@
     "    data = kwargs.pop('data')\n",
     "    d = data.pivot(index=args[1], columns=args[0], values=args[2])\n",
     "    sns.heatmap(d, **kwargs, vmin=-1, vmax=1, \n",
-    "                cmap=sns.color_palette('vlag', 10),\n",
+    "                cmap=sns.color_palette('vlag', 20),\n",
     "                linewidths=0.1, linecolor='black')\n",
     "    plt.xticks(np.arange(0.5, 12.5, 1))  # Set xticks explicitly\n",
     "    plt.gca().set_xticklabels(np.arange(0.5, 12.5, 1))  # Set xticklabels\n",
@@ -2814,7 +2823,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T06:16:29.050156Z",
+     "end_time": "2025-01-27T06:27:14.578535800Z",
      "start_time": "2025-01-27T06:15:50.073446Z"
     }
    },
@@ -2859,7 +2868,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T06:17:09.747920Z",
+     "end_time": "2025-01-27T06:27:14.578535800Z",
      "start_time": "2025-01-27T06:16:29.271812Z"
     }
    },
