--- a/Jupyter notebooks/Capstone_Graphs_Function.ipynb
+++ b/Jupyter notebooks/Capstone_Graphs_Function.ipynb
@@ -89,7 +89,15 @@
     "\n",
     "  stat_dict = {}\n",
     "\n",
+    "  # Set index to be reindex to\n",
+    "  new_lat = np.arange(-90, 90, 0.5)\n",
+    "  new_lon = np.arange(-180, 180, 0.5)\n",
+    "\n",
     "  for model_name, model in model_dict.items():\n",
+    "\n",
+    "    model = model.assign_coords(X=(((model.X + 180) % 360) - 180)).sortby(['X'])\n",
+    "    model = model.reindex(X=new_lon, Y=new_lat).ffill('X').ffill('Y')\n",
+    "\n",
     "    for region_name in coord_dict.keys():\n",
     "\n",
     "      long_min = coord_dict[region_name]['longitude'][0]\n",
@@ -102,26 +110,28 @@
     "                            .rename({'Y': 'latitude', 'X': 'longitude', 'prec': 'predicted precip', 'S': 'date of prediction', 'L': 'lead time'}))\n",
     "\n",
     "      # Interpolate and subset CHIRPS to match spatial resolution of current model and region\n",
-    "      chirps_region = (chirps_dataset.sel(latitude=slice(lat_min, lat_max), longitude=slice(long_min - 1, long_max + 1)) # One degree of resolution must be added for interpolation\n",
+    "      chirps_region = (chirps_dataset.sel(latitude=slice(lat_min - 0.5, lat_max + 0.5), longitude=slice(long_min - 0.5, long_max + 0.5)) # 0.5 degrees of resolution must be added for interpolation\n",
     "                          .interp_like(current_model_region, method='nearest'))\n",
     "\n",
     "      # Calculate realized dates for CanESM5, convert to dataframe\n",
     "      current_model_region_df = current_model_region.to_dataframe().reset_index()\n",
-    "      current_model_region_df['realization_time'] = current_model_region_df.apply(lambda x: x['date of prediction'] + pd.DateOffset(months=int(x['lead time'])), axis=1)\n",
+    "      current_model_region_df['realization time'] = current_model_region_df['date of prediction'] + (current_model_region_df['lead time'] * 30).astype('timedelta64[D]')\n",
+    "      current_model_region_df['month'] = current_model_region_df['realization time'].dt.month\n",
+    "      current_model_region_df['year'] = current_model_region_df['realization time'].dt.year\n",
     "\n",
     "      # Convert CHIRPS to dataframe\n",
     "      chirps_region_df = chirps_region.to_dataframe().reset_index()\n",
+    "      chirps_region_df['month'] = chirps_region_df['time'].dt.month\n",
+    "      chirps_region_df['year'] = chirps_region_df['time'].dt.year\n",
     "\n",
     "      # Merge CHIRPS and CanESM5 dataframe\n",
-    "      current_region_merged_df = current_model_region_df.merge(chirps_region_df, how='left', left_on=['realization_time', 'latitude', 'longitude'], right_on=['time', 'latitude', 'longitude']).dropna()\n",
+    "      current_region_merged_df = current_model_region_df.merge(current_model_region_df, how='left', left_on=['month', 'year', 'latitude', 'longitude'], right_on=['month', 'year', 'latitude', 'longitude']).dropna()\n",
     "\n",
     "      # Drop date of prediction, latitude, longitude\n",
-    "      current_region_merged_df = current_region_merged_df.drop(columns=['date of prediction', 'latitude', 'longitude'])\n",
-    "      # make a new column month that extracts month from realization time\n",
-    "      current_region_merged_df['month'] = current_region_merged_df['realization_time'].dt.month\n",
+    "      current_region_merged_df = current_region_merged_df.drop(['realization time', 'date of prediction', 'latitude', 'longitude', 'year', 'time'], axis=1)\n",
     "\n",
     "      # Make calculations on the merged dataframe for plotting\n",
-    "      corr_clean = current_region_merged_df.drop(['realization_time', 'time'], axis = 1).groupby(['month', 'lead time', 'M']).corr(method='spearman').drop('precip', axis = 1).droplevel(level=3).reset_index()\n",
+    "      corr_clean = current_region_merged_df.groupby(['month', 'lead time', 'M']).corr(method='spearman').drop('precip', axis = 1).droplevel(level=3).reset_index()\n",
     "      corr_clean_1 = corr_clean.drop(corr_clean.index[::2])\n",
     "\n",
     "      stat_current_region = (current_region_merged_df.drop(['realization_time', 'time'], axis = 1)\n",
@@ -133,7 +143,7 @@
     "      stat_current_region_clean['conditional bias'] = stat_current_region_clean.apply(lambda x: np.power(x['corr'] - x['pred std']/x['actual std'],2), axis = 1)\n",
     "      stat_current_region_clean['unconditional bias'] = stat_current_region_clean.apply(lambda x: np.power((x['pred mean'] - x['actual mean'])/x['actual std'],2), axis = 1)\n",
     "      stat_current_region_clean['potential skill'] = stat_current_region_clean.apply(lambda x: np.power(x['corr'],2), axis = 1)\n",
-    "      stat_current_region_clean = stat_current_region_clean.drop(['corr','pred mean', 'pred std', 'actual mean', 'actual std'], axis = 1)\n",
+    "      stat_current_region_clean = stat_current_region_clean.drop(['pred mean', 'pred std', 'actual mean', 'actual std'], axis = 1)\n",
     "      stat_current_region_clean['skill score'] = stat_current_region_clean.apply(lambda x: x['potential skill'] - x['conditional bias'] - x['unconditional bias'], axis = 1)\n",
     "      stat_current_region_clean = stat_current_region_clean.groupby(['month', 'lead time']).mean().drop('M', axis=1).reset_index()\n",
     "      stat_current_region_clean['region'] = region_name\n",
